[package]
name = "const-sort"
description = "Sort a slice of elements in constant time (with respect to slice length)."
version = "0.1.1"
authors = ["Jeremy Rubin <j@rubin.io>"]
edition = "2018"
license = "MPL-2.0"
categories = ["algorithms", "cryptography"]
repository = "https://github.com/JeremyRubin/const-sort"

[dependencies]
subtle = "1.0.0"

[dev-dependencies]
rand = "0.5.5"
